# ddti

./: CMakeLists.txt  LICENSE  README.md  TODO.md  run_ddti.sh
datasets/: careval.arff  careval.xlsx  nursery.names.txt
srcs/: ANode.cpp  ANode.hpp  DecisionTree.cpp  ddti.cpp  ddti.hpp  ddti_log.cpp  ddti_log.hpp  main.cpp  task.cpp  task.hpp
srcs/master/: Classifier.cpp  Classifier.hpp  Dataset.hpp  DecisionTree.cpp  DecisionTree.hpp  InductionC4_5.cpp  InductionC4_5.hpp  MasterNode.cpp  MasterNode.hpp
srcs/slave/: SlaveNode.cpp  SlaveNode.hpp  TaskC4_5.cpp  TaskC4_5.hpp
srcs/utils/: MpiCommProcess.cpp  MpiCommProcess.hpp  MpiProcess.cpp  MpiProcess.hpp  datetime.cpp  datetime.hpp  log.hpp  matrix.hpp  mlpack.cpp  mlpack.hpp
srcs/utils/mpi/: MpiCommunicator.cpp  MpiCommunicator.hpp  MpiDatatype.cpp  MpiDatatype.hpp  MpiDatatypeManager.cpp  MpiDatatypeManager.hpp  MpiException.cpp  MpiException.hpp
